# documentation-SiProd

./: 404.html  README.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml
clear_site_data/: index.html
docs/: clear_site_data.md  clear_site_data_chrome.md  clear_site_data_edge.md  index.md  install_siprod_app.md  requirements.txt  tipos_dados.md
docs/erros_app/: clear_site_data_edge.md
docs/install_app_siprod/: install_siprod_app.md
docs/mobile/install_app_siprod/: install_siprod_app.md
docs/web/clear_site_data/: clear_site_data_chrome.md
docs/web/register/register_activities/: register_activities.md
docs/web/register/register_electronic_point/: register_electronic_point.md
docs/web/register/register_equipment/: register_equipment.md
docs/web/register/register_service_release/: register_service_release.md
home/: index.html
mobile/install_app_siprod/install_siprod_app/: index.html
project_control/meeting/ata/ata/: index.html
project_control/meeting/ata/ata_25_02_22/: index.html
project_control/meeting/meeting_topic/meeting_topics_25_02_22/: index.html
project_control/meeting/meetings/: index.html
project_control/requests/: index.html
search/: search_index.json
tipos_dados/: index.html
web/clear_site_data/clear_site_data_chrome/: index.html
web/clear_site_data/clear_site_data_edge/: index.html
web/register/register_activities/register_activities/: index.html
web/register/register_electronic_point/register_electronic_point/: index.html
web/register/register_equipment/register_equipment/: index.html
(+1 files in other folders)
